--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[YOUR NAME] - Portfolio</title>
+    <title>ARIOS - Portfolio</title>
     <style>
         /* Basic Reset & Body Styles */
         body {
@@ -193,7 +193,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>[YOUR FULL NAME]</h1>
+            <h1>ARIOS ARZU</h1>
             <p>Architectural Visualization & 3D Specialist | Python & AR Developer | IT Support</p>
         </header>
 
@@ -287,7 +287,7 @@
         <section id="contact" class="contact">
             <h2>Let's Connect!</h2>
             <p>I'm available for freelance projects and collaborations. Feel free to reach out to discuss your needs.</p>
-            <p>Email: <a href="mailto:YOUR_EMAIL@EXAMPLE.COM">YOUR_EMAIL@EXAMPLE.COM</a></p>
+            <p>Email: <a href="mailto:ariosarzu@gmail.com">ariosarzu@gmail.com</a></p>
             <p>LinkedIn: <a href="YOUR_LINKEDIN_PROFILE_URL" target="_blank">linkedin.com/in/YOUR_PROFILE</a></p>
             <p>GitHub: <a href="YOUR_GITHUB_PROFILE_URL" target="_blank">github.com/YOUR_USERNAME</a> (for programming projects)</p>
         </section>
