--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         </section>
 
         <footer>
-            <p>© <script>document.write(new Date().getFullYear());</script> [YOUR FULL NAME]. All rights reserved.</p>
+            <p>© <script>document.write(new Date().getFullYear());</script> ARIOS All rights reserved.</p>
         </footer>
     </div>
 </body>
