--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             <h2>Let's Connect!</h2>
             <p>I'm available for freelance projects and collaborations. Feel free to reach out to discuss your needs.</p>
             <p>Email: <a href="mailto:ariosarzu@gmail.com">ariosarzu@gmail.com</a></p>
-            <p>LinkedIn: <a href="YOUR_LINKEDIN_PROFILE_URL" target="_blank">linkedin.com/in/YOUR_PROFILE</a></p>
-            <p>GitHub: <a href="YOUR_GITHUB_PROFILE_URL" target="_blank">github.com/YOUR_USERNAME</a> (for programming projects)</p>
+            <p>LinkedIn: <a href="www.linkedin.com/in/arios-arzu-26528b369" target="_blank">linkedin.com/in/ARIOS-ARZU</a></p>
+            <p>GitHub: <a href="https://arprogam.github.io/portfoliom/" target="_blank">github.com/arprogam</a> (for programming projects)</p>
         </section>
 
         <footer>
