--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <h2>Let's Connect!</h2>
             <p>I'm available for freelance projects and collaborations. Feel free to reach out to discuss your needs.</p>
             <p>Email: <a href="mailto:ariosarzu@gmail.com">ariosarzu@gmail.com</a></p>
-            <p>LinkedIn: <a href="www.linkedin.com/in/arios-arzu" target="_blank">linkedin.com/in/ARIOS-ARZU</a></p>
+            <p>LinkedIn: <a href="www.linkedin.com/in/arios-arzu" target="_blank">www.linkedin.com/in/arios-arzu</a></p>
             <p>GitHub: <a href="https://arprogam.github.io/portfoliom/" target="_blank">github.com/arprogam</a> (for programming projects)</p>
         </section>
 
