--- a/index.html
+++ b/index.html
@@ -227,16 +227,16 @@
             <div class="portfolio-grid">
                 <!-- Project 1: Architectural Exterior Render -->
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/400x200?text=Architectural+Render+1" alt="Architectural Exterior Render">
-                    <h3>Modern Villa Exterior</h3>
-                    <p>A photorealistic render of a modern villa exterior, showcasing detailed landscaping and material finishes. Created using Revit for modeling and Lumion for rendering.</p>
+                    <img src="arioslc01.jpg" alt="Architectural Exterior Render">
+                    <h3>Modern Learning Centre Exterior</h3>
+                    <p>A photorealistic render of a Learning Centre exterior, showcasing detailed landscaping and material finishes. Created using Revit for modeling and Lumion for rendering.</p>
                 </div>
 
                 <!-- Project 2: Interior Design Visualization -->
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/400x200?text=Interior+Visualization+2" alt="Interior Design Visualization">
-                    <h3>Cozy Living Room Interior</h3>
-                    <p>Interior visualization of a living space, highlighting lighting, textures, and furniture arrangement. Modeled in 3ds Max and rendered with V-Ray/Lumion.</p>
+                    <img src="arioslc02.jpg" alt="Interior Design Visualization">
+                    <h3>Modern Learning Centre Exterior</h3>
+                    <p>Interior visualization of a living space, highlighting lighting, textures, and furniture arrangement. Modeled in 3ds Max and rendered with Lumion.</p>
                 </div>
 
                 <!-- Project 3: 3D Product Model -->
