--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
 
                 <!-- Project 3: 3D Product Model -->
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/400x200?text=Product+Model+3" alt="3D Product Model">
-                    <h3>Ergonomic Chair Product Render</h3>
-                    <p>Detailed 3D model and render of an ergonomic office chair for product visualization. Created entirely in Blender, focusing on realistic materials.</p>
+                    <img src="video_2025-06-01_11-46-40.mp4" alt="3D Product Model">
+                    <h3>Modern Learning Centre Exterior</h3>
+                    <p>A photorealistic render of a Learning Centre exterior, showcasing detailed landscaping and material finishes. Created using Revit for modeling and Lumion for rendering.</p>
                 </div>
 
                 <!-- Project 4: AutoCAD Drafting -->
